mobile menu: Fix the z-index to cover the document's custom scrollbars.

--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -234,7 +234,7 @@
         margin: 0;
         -webkit-overflow-scrolling: touch;
         overflow: scroll;
-        z-index: 1000;
+        z-index: 1010;
     }
 
 }
